--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Oswald', sans-serif;
 }
 
-.jumbotron {
+.jumbotron-home {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
