--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -9,7 +9,7 @@
 	padding-top: 70px;
 }
 
-.navbar-text > a {
+.navbar-text>a {
 	color: inherit;
 	text-decoration: none;
 }
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 	padding-bottom: 10px;
 }
 
-.home{
+.home {
 	padding-bottom: 80px;
 }
 
@@ -44,13 +44,16 @@ h1, h2, h3, h4, h5, h6 {
 
 .thumbnail img {
 	transition: all 0.3s ease 0s;
-	width: 100%;
+	width: auto;
+	height: 200px;
+	display: block;
 }
 
 .thumbnail {
 	overflow: hidden;
-/* 	width: 100%; */
-    height: 300px;  
+	/* 	width: 100%; */
+/* 	height: 300px; */
+
 }
 
 /* errors */
@@ -66,4 +69,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .pag {
 	text-align: center;
+}
+
+#ex1Slider .slider-selection {
+	background: #BABABA;
 }
