--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -49,6 +49,13 @@ h1, h2, h3, h4, h5, h6 {
 	display: block;
 }
 
+.image-order img {
+	transition: all 0.3s ease 0s;
+	width: auto;
+	height: 120px;
+	display: block;
+}
+
 .thumbnail {
 	overflow: hidden;
 	/* 	width: 100%; */
